added form questions

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
   <title>Favorite Things</title>
 </head>
 <body>
-  
+  <div class="container1">
+  <form>
+    <input type="text" id="answer1">
+    <label for="answer1">What is your favorite color?</label><br>
+    <input type="text" id="answer2">
+    <label for="answer2">What is your favorite animal?</label><br>
+    <input type="text" id="answer3">
+    <label for="answer3">What is your favorite icecream flavor?</label><br>
+    <input type="text" id="answer4">
+    <label for="answer4">What is your name?</label><br>
+    <input type="text" id="answer5">
+    <label for="answer5">What is your favorite movie?</label><br>
+  </form>
+</div>
 </body>
 </html>
