added array inputs in js
Co-authored-by: Matthew Banse-Fay <matthew.bansefay@gmail.com>
Co-authored-by: RosarioRu <RosarioRu@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
 </head>
 <body>
   <div class="container1">
-  <form>
-    <input type="text" id="answer1">
-    <label for="answer1">What is your favorite color?</label><br>
-    <input type="text" id="answer2">
-    <label for="answer2">What is your favorite animal?</label><br>
-    <input type="text" id="answer3">
-    <label for="answer3">What is your favorite icecream flavor?</label><br>
-    <input type="text" id="answer4">
-    <label for="answer4">What is your name?</label><br>
-    <input type="text" id="answer5">
-    <label for="answer5">What is your favorite movie?</label><br>
+  <form id="favorite-form">
+    <label for="answer1">What is your favorite color?</label>
+    <input type="text" id="answer1"><br>
+    <label for="answer2">What is your favorite animal?</label>
+    <input type="text" id="answer2"><br>
+    <label for="answer3">What is your favorite icecream flavor?</label>
+    <input type="text" id="answer3"><br>
+    <label for="answer4">What is your name?</label>
+    <input type="text" id="answer4"><br>
+    <label for="answer5">What is your favorite movie?</label>
+    <input type="text" id="answer5"><br>
+    <button type="submit">Submit</button>
   </form>
 </div>
 </body>
