added list elements and retuned arrays to list
Co-authored-by: Matthew Banse-Fay <matthew.bansefay@gmail.com>
Co-authored-by: RosarioRu <RosarioRu@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
     <input type="text" id="answer5"><br>
     <button type="submit">Submit</button>
   </form>
+  <div class="results-here">
+    <ul>
+      <li id="result1"></li>
+      <li id="result2"></li>
+      <li id="result3"></li>
+    </ul>
+  </div> 
+
 </div>
 </body>
 </html>
